--- a/css/carousel.less
+++ b/css/carousel.less
@@ -75,37 +75,47 @@
 // -----------------
 
 #ratg{
-  background-image:url('../img/ratg.png');
-  background-position:center;
-  background-size:cover;
+  background: url('../img/ratg.png') no-repeat center center fixed;;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
   color: #fff;
 }
 
 #urbansprawl{
-  background-image:url('../img/urbansprawl.png');
-  background-position:center;
-  background-size:cover;
+  background: url('../img/urbansprawl.png') no-repeat center center fixed;;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
   color: #333;
 }
 
 #ninelives{
-  background-image:url('../img/9lives.png');
-  background-position:center;
-  background-size:cover;
+  background: url('../img/9lives.png') no-repeat center center fixed;;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
   color: #fff;
 }
 
 #polyplane{
-  background-image:url('../img/polyplane.png');
-  background-position:center;
-  background-size:cover;
+  background: url('../img/polyplane.png') no-repeat center center fixed;;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
   color: #333;
 }
 
 #about{
-  background-image:url('../img/about.png');
-  background-position:center;
-  background-size:cover;
+  background: url('../img/about.png') no-repeat center center fixed;;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
   color: #fff;
 }
 
